[gd_scene load_steps=8 format=3 uid="uid://dj3pes45dip6o"]

[ext_resource type="Texture2D" uid="uid://bh0arcprifcq5" path="res://icon.svg" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://bqklqg1nx0k5w" path="res://script/enemy.gd" id="1_md0e3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
height = 50.0

[sub_resource type="Gradient" id="Gradient_md0e3"]
offsets = PackedFloat32Array(0, 0.00526315, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.794737, 0.794737, 0.794737, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4ra3w"]
gradient = SubResource("Gradient_md0e3")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_md0e3"]
polygon = PackedVector2Array(115, -8, 109, -11, 139, -4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4ra3w"]
polygon = PackedVector2Array(-14, 12, 15, 5, -17, 15)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_md0e3")

[node name="RayCast1" type="RayCast2D" parent="."]
position = Vector2(5, -3)
target_position = Vector2(295, -82)

[node name="RayCast2" type="RayCast2D" parent="."]
position = Vector2(7, 0)
target_position = Vector2(285, 85)

[node name="RayCast3" type="RayCast2D" parent="."]
position = Vector2(12, -2)
target_position = Vector2(311, 3)

[node name="RayCast4" type="RayCast2D" parent="."]
position = Vector2(1, -1)
target_position = Vector2(313, -43)

[node name="RayCast5" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(312, 44)

[node name="RayCast6" type="RayCast2D" parent="."]
position = Vector2(1, -10)
target_position = Vector2(308, -54)

[node name="RayCast7" type="RayCast2D" parent="."]
position = Vector2(2, 4)
target_position = Vector2(319, 20)

[node name="RayCast8" type="RayCast2D" parent="."]
position = Vector2(3, -6)
target_position = Vector2(313, -16)

[node name="RayCast9" type="RayCast2D" parent="."]
position = Vector2(1, 8)
target_position = Vector2(300, 56)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-8.76562, -1)
scale = Vector2(0.159912, 0.328125)
texture = ExtResource("1_7p1mj")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, -1)
shape = SubResource("CapsuleShape2D_md0e3")
metadata/_edit_lock_ = true

[node name="light" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="light"]
position = Vector2(-1, -2.49999)
scale = Vector2(11.6875, 2.98438)
color = Color(1, 0, 0, 0.635294)
energy = 4.27
shadow_enabled = true
texture = SubResource("GradientTexture2D_4ra3w")

[node name="LightOccluder2D1" type="LightOccluder2D" parent="light"]
position = Vector2(-118, 9)
occluder = SubResource("OccluderPolygon2D_md0e3")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="light"]
position = Vector2(8, -15)
occluder = SubResource("OccluderPolygon2D_4ra3w")
